--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./assets/css/base.css" />
-    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/home.css" />
   </head>
   <body>
     <div class="app">
